--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.4",
     "materialize-css": "^0.100.1",
     "react": "^15.6.1",
+    "react-confirm-alert": "^1.0.7",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
